.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: apoll
  name: apoll-web
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web
      app.kubernetes.io/component: webserver
      app.kubernetes.io/part-of: apoll
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
        app.kubernetes.io/component: webserver
        app.kubernetes.io/part-of: apoll
    spec:
      containers:
      - image: localhost/apoll/web:latest
        imagePullPolicy: Never
        name: apoll
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
