.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: apoll
  name: apoll-web
  namespace: production
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: apoll
