.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: apoll
  name: apoll-web
  namespace: production
spec:
  rules:
  - host: apoll.app
    http:
      paths:
      - backend:
          service:
            name: apoll-web
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - apoll.app
    secretName: apoll-web-tls
